Fixes z-index issue while dragging elements to the workspace. Lowered the z-index of the workspace on the right to tackle problem. Fixes #232.

--- a/restcomm/restcomm.rvd/src/main/webapp/css/rvd.css
+++ b/restcomm/restcomm.rvd/src/main/webapp/css/rvd.css
@@ -564,6 +564,7 @@ textarea.medium {
 
 .sticky-workspace{
 	float:right;
+	z-index:-1;
 }
 
 
